syntax = "proto3";

package auth;

option go_package = "github.com/VictorSidoruk/auth;auth";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

service UserAPI{
  rpc Create(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/auth/v1/create"
      body: "*"
    };
  }
  rpc Get(GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get: "/auth/v1/{id}"
    };
  }
  rpc Update(UpdateUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/auth/v1"
      body: "*"
    };
  }
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/auth/v1"
    };
  }
}

// Enum for role

enum Role {
  USER = 0;
  ADMIN = 1;
}



message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message UpdateUserResponse {
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
}

