syntax = "proto3";

package auth_login;

option go_package = "github.com/stawwkom/auth_service/pkg/auth_login;auth_login";

service AuthV1{
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest{
  string username = 1;
  string password = 2;
}
message LoginResponse{
  string refresh_token = 1;
}

message GetRefreshTokenRequest{
  string refresh_token = 1;
}
message GetRefreshTokenResponse{
  string refresh_token = 1;
}

message GetAccessTokenRequest{
  string refresh_token = 1;
}
message GetAccessTokenResponse{
  string access_token = 1;
}